[gd_scene load_steps=3 format=2]

[ext_resource path="res://attacks/weapon_scripts/TimeStop.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/item_found.wav" type="AudioStream" id=2]

[node name="TimeStop" type="Node2D"]
script = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]

[node name="Activation" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ScreenFilter" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="ColorRect" type="ColorRect" parent="ScreenFilter"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.368627, 1, 0.203922 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="finished" from="Activation" to="." method="_on_Activation_finished"]
